# FOA-n8n

./: .env.example  .gitignore  Dockerfile.flask  README.md  app.py  docker-compose.yml  pyproject.toml  test_video_analysis_endpoin.sh  tiktok.py
scripts/: ticktok_download_and_analyze_video.py  ylp.py
video_service/: docker-compose.yml
workflows/: example-workflow.json
